修改 与重置

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link href='http://fonts.font.im/css?family=Source+Serif+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <style>
+    *{
+      font-family: 'Source Serif Pro', serif;
+      font-size:105%;
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -25,6 +32,6 @@
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  
+
 </body>
 </html>
